# RustCP

./: Cargo.toml
api_collector/: Cargo.toml  Dockerfile
api_collector/k8s/: deployment.yaml  service.yaml
api_collector/src/: main.rs
asset/: postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml
asset/rabbitmq/: rabbitmq-deployment.yaml  rabbitmq-service.yaml
asset/redis/: redis-deployment.yaml  redis-service.yaml
